// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin creates genfors returns invalid admin password if incorrect 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "error": "Ugyldig administratorpassord.",
      },
      "type": "AUTH_ERROR",
    },
  ],
]
`;

exports[`admin login emits sign in with manager permissions if auth successful 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "full_name": "Namy",
        "id": "123",
        "logged_in": true,
        "permissions": 10,
        "username": undefined,
      },
      "type": "AUTH_SIGNED_IN",
    },
  ],
]
`;

exports[`admin login returns invalid admin password if incorrect 1`] = `
Array [
  Array [
    "action",
    Object {
      "data": Object {
        "error": "Ugyldig administratorpassord.",
      },
      "type": "AUTH_ERROR",
    },
  ],
]
`;
